<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/icon_copy"
        android:title="Copy" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/icon_edit"
        android:title="Edit" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/icon_delete"
        android:title="Delete" />

</menu>
